2002-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-at-point (ffap)): Strip text props under XEmacs.
	(ffap-url-regexp): Modify the value to make it match to https urls
	for Emacs 19, 20 and XEmacs.

2002-03-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-tab-drag-mouse-function): Fix problem when dragged
	mouse position is outside of the original frame.

	* w3m.el (w3m-version): New variable.
	(toplevel): Detect w3m version.
	(w3m-user-agent): New user option.
	(w3m-add-user-agent): Ditto.
	(w3m-w3m-retrieve): Add User-Agent: field if w3m-add-user-agent is
	non-nil.

	* w3m-e21.el (w3m-tab-drag-mouse-function): New function.
	(w3m-tab-make-keymap): Add mouse-1, mouse-2, drag-mouse-1 and
	drag-mouse-2.

	* w3m-cookie.el (w3m-cookie-set): Fixed docstring.

2002-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-find-coding-system): Alias to ignore if the
	function `find-coding-system' is not available.
	(w3m-make-ccl-coding-system): Check whether the function
	`make-ccl-coding-system' is available instead of checking the
	feature `mule' to determine what function should be aliased to.
	(coding-system-list): Alias to ignore if it is not available.
	(define-ccl-program): Check whether it is available instead of
	checking the feature `mule' to determine if it is aliased to
	`ignore'.
	(w3m-detect-coding-with-priority): Quote
	`w3m-default-coding-system'.

2002-03-24  Nix  <nix@esperi.demon.co.uk>

	* w3m-xmas.el (w3m-detect-coding-with-priority): New macro, handle
	non-MULE XEmacsen.
	(w3m-detect-coding-region): Use it.

2002-03-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-cookie.el (w3m-cookie-1-set): Fixed problem when no `Expires',
	ignore is ignored.

2002-03-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-cookie.el (w3m-cookie-url, w3m-cookie-domain,
	w3m-cookie-secure, w3m-cookie-name, w3m-cookie-value,
	w3m-cookie-path, w3m-cookie-version, w3m-cookie-expires,
	w3m-cookie-ignore): Define as macro.